--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TerminusAI</title>
+    <title>Terminus</title>
     <style>
         body {
             display: flex;
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-    <h1>TerminusAI</h1>
+    <h1>Terminus</h1>
     <a href="about.html">About</a>
 </body>
 </html>
