--- a/index.html
+++ b/index.html
@@ -22,5 +22,14 @@
 <body>
     <h1>Terminus</h1>
     <a href="about.html">About</a>
+    <svg width="200" height="200" viewBox="-100 -100 200 200" xmlns="http://www.w3.org/2000/svg">
+        <g transform="rotate(90)">
+            <!-- First triangle -->
+            <polygon points="0,-60 52,30 -52,30" fill="red"/>
+            <!-- Second (inverted) triangle -->
+            <polygon points="0,60 -52,-30 52,-30" fill="red"/>
+        </g>
+    </svg>
+      
 </body>
 </html>
