--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- <icon type="image/svg" href="logo.svg"> -->
+    <!-- define favicon -->
+    <link rel="icon" type="image/svg" href="logo.svg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terminus</title>
@@ -22,14 +25,6 @@
 <body>
     <h1>Terminus</h1>
     <a href="about.html">About</a>
-    <svg width="200" height="200" viewBox="-100 -100 200 200" xmlns="http://www.w3.org/2000/svg">
-        <g transform="rotate(90)">
-            <!-- First triangle -->
-            <polygon points="0,-60 52,30 -52,30" fill="red"/>
-            <!-- Second (inverted) triangle -->
-            <polygon points="0,60 -52,-30 52,-30" fill="red"/>
-        </g>
-    </svg>
-      
+    <img src="logo.svg"/>
 </body>
 </html>
