--- a/research.html
+++ b/research.html
@@ -31,14 +31,32 @@
             width: 100px;
             height: 100px;
         }
+        .container {
+            display: flex;
+            flex-direction: column;
+            /* align-items: center; */
+            /* justify-content: center; */
+            /* height: 100vh; */
+            /* text-align: center; */
+            padding: 20px;
+        }
     </style>
 </head>
 <body>
     <div>
         <img src="logo.svg"/>
         <h1>Terminus</h1>
+        <h3>Research</h2>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="research.html">Research</a>
+    </div>
+    <div class="container">
+        <list>
+            <li>Terminus.ai</li>
+            <li>Terminus.ai</li>
+            <li>Terminus.ai</li>
+        </list>
     </div>
 </body>
 </html>
