--- a/todo.html
+++ b/todo.html
@@ -45,10 +45,22 @@
         <a href="research.html">Research</a>
     </div>
     <div class="container">
+        <h5>Unassigned</h5>
         <list>
-            <li>Terminus.ai</li>
-            <li>Terminus.ai</li>
-            <li>Terminus.ai</li>
+            <li>finish semi research for remaining short list stocks</li>
+            <li>write 'about us'</li>
+            <li>write first report series article 1 about process</li>
+            <li>write first report series article 2 about cloud picks</li>
+            <li>write first report series article 3 about non cloud non semi picks</li>
+            <li>write first report series article 4 about semi picks</li>
+            <li>set up terminus project underscore github and rehost website</li>
+            <li>set up daily and weekly report workflow</li>
+            <li>distribute finviz, rocai, alphabeat, and edgar scraping and ai tools through shared github and set up for jacob and scott</li>
+            <li>terminus discord, X, substack</li>
+            <li>repost articles to substack and aggregators like hackernews and wso</li>
+            <li>7yr world domination Terminus, Anacreon, etc plan (adjacencies to research)</li>
+            <li>rich clique members and following</li>
+            <li>shared knowledge base and dataset system</li>
         </list>
     </div>
 </body>
