--- a/todo.html
+++ b/todo.html
@@ -32,6 +32,9 @@
             display: flex;
             flex-direction: column;
             padding: 20px;
+            align-items: left;
+            justify-content: left;
+            text-align: left;
         }
     </style>
 </head>
