--- a/research.html
+++ b/research.html
@@ -11,8 +11,8 @@
         body {
             display: flex;
             flex-direction: column;
-            align-items: center;
-            justify-content: center;
+            /* align-items: center; */
+            /* justify-content: center; */
             height: 100vh;
             text-align: center;
             font-family: Arial, sans-serif;
