--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             margin-bottom: 10px;
         }
         a {
-            /* margin: 10px; */
+            margin: 10px;
             color: #333333;
         }
         img {
