--- a/research.html
+++ b/research.html
@@ -34,8 +34,8 @@
         .container {
             display: flex;
             flex-direction: column;
-            /* align-items: center; */
-            /* justify-content: center; */
+            align-items: center;
+            justify-content: center;
             /* height: 100vh; */
             /* text-align: center; */
             padding: 20px;
